--- a/NewFile.html
+++ b/NewFile.html
@@ -20,9 +20,9 @@
 		<!-- header start -->
 		<div id="header" class="section">
 			<img alt="" class="img-circle" src="./image/profile1.jpg">
-			<p>SAGAR KHATRI</p>
+			<p>D. KHATRI</p>
 			<nav class="navbar navbar-expand-lg navbar-light bg-light" >
-  <div >
+  <div>
    
     <ul class="nav navbar-nav" id ="nav" >
     <li><a class="navbar-brand" href="#"><button type="button" class="btn btn-light">About Me</button></a></li>
@@ -51,10 +51,10 @@
 		<div class="section">
 			<h1>About Me</h1>
 			<p>
-				Hello World! my name is <strong>Sagar</strong>. I have a diverse background and I have performed my previous responsibilities very 
+				Hello World! my name is <strong>DK</strong>. I have a diverse background and I have performed my previous responsibilities very 
 				wisely; in other word, excellently. I love to learn web development stuff everyday.I do plan,research and practice coding based
-				 on project.I am more focusing front-end web technologies including <b>HTML5, CSS3, BOOTSTRAP,JAVASCRIPT, JQUERY, ANGULARJS,
-				  PHP & MYSQL.</b>When I start coding with some new ideas I enjoyed alot and keep searching and practicing gives me 
+				 on project.I am more focusing front-end web technologies including <b>HTML5, CSS3, BOOTSTRAP,JAVASCRIPT, JQUERY, ANGULAR and TypeScript
+				 .</b>When I start coding with some new ideas I enjoyed alot and keep searching and practicing gives me 
 				  <i>real world problem-solving skills.</i>  
 			</p>
 			<p class="quote">"Declare variables, not war"</p>
